<resources>
    <string name="app_name">goservice</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo_description">App logo</string>
    <string name="Project_name">Goservice</string>
    <string name="user_login_image">user login image</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="resend"><u>Resend</u></string>
    <string name="verify">Verify</string>
    <string name="email_text">Email</string>
    <string name="referral_code">Referral code</string>
    <string name="next">next</string>
    <string name="username">Username</string>
    <string name="people_repairing_a_car_image">People repairing a car image</string>
    <string name="add_your_vehicle">Enter your vehicle details</string>
    <string name="enter_registration_no">Enter registration no</string>
    <string name="enter_model">Enter Model</string>
    <string name="manufacture_date">Manufacture Date:</string>
    <string name="_09_12_2021">09/12/2021</string>
    <string name="change">CHANGE</string>
    <string name="mini_car_image">Mini car image</string>
    <string name="choose_your_type">Choose your type:</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="hello_user">Hello, User</string>
    <string name="general_service">General service</string>
    <string name="full_service">Full service</string>
    <string name="custom_service">Custom service</string>
    <string name="brake_service">Brake service</string>
    <string name="electric_services">Electric services</string>
    <string name="wheel_services">Wheel services</string>
    <string name="general_service_icon">General service icon</string>
    <string name="full_service_icon">Full service icon</string>
    <string name="custom_service_icon">Custom service icon</string>
    <string name="brake_service_icon">Brake service icon</string>
    <string name="electric_service_icon">Electric service icon</string>
    <string name="wheels_service_icon">Wheels service icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_services">Select services:</string>
    <string name="service">service</string>
    <string name="price">Price:</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="services_provided">Services Provided</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="complete_vehicle_inspection">Complete vehicle inspection</string>
    <string name="chain_sprocket_and_gearbox_issues">Chain Sprocket and Gearbox Issues</string>
    <string name="inspecting_gearbox_and_checking_chainsprocket_with_chain_lubrication">Inspecting gearbox and checking chainsprocket with chain lubrication</string>
    <string name="ignition_and_carburetor_issues">Ignition and Carburetor issues</string>
    <string name="inspecting_engine_carburetor_cleansing_and_spark_plug_issues">Inspecting engine, carburetor cleansing and spark plug issues.</string>
    <string name="includes_general_service">Includes General Service</string>
    <string name="oil_change_air_filter_change_clutch_brake_and_electrical_issues">Oil change, air filter change, clutch, brake and electrical issues.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="oil_change">Oil Change</string>
    <string name="engine_lubrication">Engine Lubrication</string>
    <string name="electrical_issues">Electrical Issues</string>
    <string name="ignition_battery_and_checking_fuses">Ignition, battery and checking fuses.</string>
    <string name="clutch_and_brake_issues">Clutch and brake issues</string>
    <string name="inspecting_clutch_wire_brake_fluid_and_replacement">Inspecting clutch wire, brake fluid and replacement.</string>
    <string name="air_filter_change">Air Filter Change</string>
    <string name="air_filter_cleansing_and_replacement">Air Filter cleansing and replacement.</string>
    <string name="view_cart">View cart</string>
    <string name="proceed_to_booking">Proceed to booking</string>
    <string name="rs_0">Rs.0</string>
    <string name="inclusive_of_service_charge_and_taxes">(Inclusive of service charge and taxes.)</string>
    <string name="total_cost">Total Cost:</string>
    <string name="_0">0</string>
    <string name="service_count">Service count:</string>
    <string name="price_details">Price Details:</string>
    <string name="no_item_found_in_cart">No item found in cart</string>
    <string name="clear">Clear</string>
    <string name="addplus">+ Add</string>
    <string name="services">Services</string>
    <string name="changeVehicle">CHANGE</string>
    <string name="selected_vehicle">Selected Vehicle</string>
    <string name="place_order">Place Order</string>
    <string name="vehicle">Vehicle:</string>
    <string name="xxxxxxxxxxx">XXXXXXXXXXX</string>
    <string name="order_summary">Order Summary</string>
    <string name="schedule_date">Schedule Date:</string>
    <string name="contact_address">Contact Address:</string>
    <string name="service_cost">Service Cost:</string>
    <string name="enter_your_address_for_service">Enter your address for service</string>
    <string name="order_details">Order Details</string>
    <string name="no_orders">No Orders</string>
    <string name="my_orders">My Orders</string>
    <string name="status">Status</string>
    <string name="ordered_on">Ordered on:</string>
    <string name="booking_id">Booking ID:</string>
    <string name="usernameprofile">Username:</string>
    <string name="email">Email:</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="removebutton">remove</string>
    <string name="set">set</string>
    <string name="vehicle_register_no">Vehicle Register no:</string>
    <string name="bike">Bike:</string>
    <string name="small_car_icon">Small car/bike icon</string>
    <string name="no_vehicles">No vehicles</string>
    <string name="add_vehicles">Add vehicles</string>
    <string name="market_place">     Market place</string>
    <string name="profile">     Profile</string>
    <string name="my_vehicle">     My Vehicle</string>
    <string name="log_out">     Log out</string>
    <string name="description">Description:</string>
    <string name="sell_your_vehicle">Sell your vehicle</string>
    <string name="car_image">Car image</string>
    <string name="condition">Condition:</string>
    <string name="licence_no">Licence No:</string>
    <string name="manuf_date">Manuf. date:</string>
    <string name="miles">Miles:</string>
    <string name="watch_in_ar"><u>Watch in AR</u></string>
    <string name="vehicle_details">Vehicle Details:</string>
    <string name="contact_seller">Contact seller</string>
    <string name="seller_details">Seller Details</string>
    <string name="name">Name:</string>
    <string name="ph_no">Ph. No:</string>
    <string name="post">Post</string>
    <string name="upload_image"><u>Upload image</u></string>
</resources>