<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ede8e8"
    android:orientation="vertical"
    app:cardCornerRadius="6dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDefault"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/vehicleNoTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vehicleTxt"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/vehicle_register_no"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicleTxt"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/bike"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addItemButton"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/cart_theme"
                android:padding="3dp"
                android:text="@string/set"
                android:textAlignment="center"
                android:textColor="#f24b5f"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/removeItemButton"
                android:layout_width="75dp"
                android:layout_height="25dp"
                android:layout_below="@+id/addItemButton"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/cart_theme"
                android:padding="3dp"
                android:text="@string/removebutton"
                android:textAlignment="center"
                android:textColor="#f24b5f"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imgCar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/vehicleNoTxt"
                android:layout_margin="3dp"
                android:visibility="gone"
                android:src="@drawable/car"
                android:contentDescription="@string/small_car_icon" />

            <ImageView
                android:id="@+id/imgScooter"
                android:layout_width="50dp"
                android:contentDescription="@string/small_car_icon"
                android:layout_height="50dp"
                android:layout_below="@+id/vehicleNoTxt"
                android:layout_margin="3dp"
                android:visibility="gone"
                android:layout_marginStart="50dp"
                android:src="@drawable/motorcycle" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>