<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/serviceCardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:background="#FFF"
        app:cardCornerRadius="5dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/serviceName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/serviceName"
                    android:layout_marginTop="5dp"
                    android:text="@string/price"
                    android:textColor="#000000"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buttonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <android.widget.Button
                    android:id="@+id/removeItemButton"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/cart_theme"
                    android:text="@string/remove"
                    android:textColor="#f24b5f"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <android.widget.Button
                    android:id="@+id/addItemButton"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/cart_theme"
                    android:text="@string/add"
                    android:textColor="#f24b5f"
                    android:textSize="10sp" />

            </RelativeLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>