<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewDefault"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="135dp">

        <ImageView
            android:id="@+id/car_image_view"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/car" />
        <!--            app:civ_border_color="#EAE7E7"-->
        <!--            app:civ_border_width="1dp" -->
        <TextView
            android:id="@+id/vehicleDummyModelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/car_image_view"
            android:text="@string/vehicle"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vehicleModelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/vehicleDummyModelTextView"
            android:text="@string/vehicle"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/priceDummyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vehicleModelTextView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/car_image_view"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vehicleModelTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/priceDummyTextView"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/descDummyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceTextView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/car_image_view"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descDummyTextView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/car_image_view"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>